--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.APP_GITHUB_TOKEN }}
-          ref: grimlock-k8s
+          ref: main
       - name: modify values
         uses: mingjun97/file-regex-replace@v1
         with:
@@ -47,7 +47,7 @@ jobs:
           exclude: '.git'
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          branch: grimlock-k8s
+          branch: main
           commit_message: bump version
           commit_user_name: leonid korniienko
           commit_user_email: leo@pdffiller.com
