--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,7 +7,7 @@ on:
         required: true
       tag_sha:
         description: "new sha tag value"
-        required: true
+        required: false
       environment:
         description: deprecated
         required: false
