--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,11 @@
-name: Kubernetes Deploy
+name: Kubernetes Deploy <& ${{matrix.user}} ${{ github.event.inputs.branch }} >
+strategy:
+  matrix:
+    build: [1]
+    include:
+      -build: 1
+       user: ${{ github.event.inputs.user }}
+       branch: ${{ github.event.inputs.branch }}
 on:
   workflow_dispatch:
     inputs:
